--- a/0courseprep.html
+++ b/0courseprep.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Data Science for Agriculture in R</title>
+<title>Before the workshop</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -464,17 +464,49 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Data Science for Agriculture in R</h1>
+<h1 class="title toc-ignore">Before the workshop</h1>
 
 </div>
 
 
-<div id="hi-there" class="section level1 tabset tabset-fade tabset-pills">
-<h1>Hi there!</h1>
-<p><a href="https://schmidtpaul.github.io/DSFAIR/" target="_blank">DSFAIR - Data Science for Agriculture in R</a> provides a cookbook with statistical analyses of typical examples in life sciences (focus on agriculture/biology). It can be seen as the smaller brother of <a href="https://schmidtpaul.github.io/MMFAIR/" target="_blank">MMFAIR - Mixed Models for Agriculture in R</a>, because it deals with more basic analyses. Where possible, I try to use example data/analyses that have been published in university lecture notes or peer-reviewed journals. Note that <a href="https://schmidtpaul.github.io/crashcouRse" target="_blank">CrashcouRse - R für Bio- und Agrarwissenschaftler</a> is the German predecessor of this website.</p>
-<p>In terms of R syntax, I generally try to follow the approach presented on the <a href="https://r4ds.had.co.nz/" target="_blank">“R for Data Science” website</a>, making use of<a href="temp.html">:</a></p>
-<p><a href="https://CRAN.R-project.org/package=dplyr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/dplyr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=ggplot2"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/ggplot2.png" width="80"></a> <a href="https://r4ds.had.co.nz/pipes.html"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/pipe.png" width="80"></a> <a href="https://CRAN.R-project.org/package=purrr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/purrr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=scales"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/scales.png" width="80"></a> <a href="https://CRAN.R-project.org/package=stringr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/stringr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=tibble"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tibble.png" width="80"></a> <a href="https://CRAN.R-project.org/package=tidyr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tidyr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=tidyverse"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tidyverse.png" width="80"></a></p>
-<p><a href="0courseprep.html" target="_blank">Here are some tips</a> to help you prepare for an upcoming workshop!</p>
+<p>Hi there! If you are reading this, you will most likely soon participate in an R-workshop given by me. Thank you - I am already looking forward to it! Here I would briefly like to give you some help and tips with the preparation for this course.</p>
+<div id="for-any-workshop" class="section level1">
+<h1>For any workshop</h1>
+<p>Online workshop or not - here are some tips that are always helpful.</p>
+<div id="installing-r-and-rstudio" class="section level2">
+<h2>Installing R and RStudio</h2>
+<p>In order to use R, it may be necessary to install it first. Notice that when I say “use R”, I am actually talking about two different softwares: <strong>R</strong> and <strong>RStudio</strong>. These two work together so well, that they are almost inseparable to me. R is the actual software that does the computing and statistics, while RStudio is basically a user interface that makes using R much more intuitive and better.</p>
+<p>Therefore, you need to install both! It is not that complicated and there are many tutorials on how to do it - for example <a href="https://rstudio-education.github.io/hopr/starting.html" target="_blank">this one from RStudio</a>.</p>
+<p>If you already have R on your computer, but it has been a long time since you have used it, you may just try to update it. <a href="url" target="_blank">Here is a tutorial</a> on how to do just that.</p>
+</div>
+</div>
+<div id="for-online-workshops" class="section level1">
+<h1>For online workshops</h1>
+<p>If our upcoming workshop will happen via zoom, then there are a few more helps I would like to give you.</p>
+<div id="do-i-need-to-install-zoom" class="section level2">
+<h2>Do I need to install zoom?</h2>
+<p>Not necessarily. It is not required to install the zoom software in order to participate in a zoom meeting, because you can also <a href="https://support.zoom.us/hc/en-us/articles/115005666383-Show-a-Join-from-your-browser-Link" target="_blank">join from your browser</a>. Basically, there will be a link that says “Join from your browser” and that’s it.</p>
+<p>However, having the zoom software installed may give you some additional functions during the meeting.</p>
+</div>
+<div id="do-you-have-a-second-screen" class="section level2">
+<h2>Do you have a second screen?</h2>
+<p>Here are the three main scenarios and what I think about them. They are ranked from worst to best:</p>
+<p><strong>3. No, I only have a single screen attached to my laptop/computer</strong> No worries - you can still participate and will have no problem following me during the course. What may become difficult, however, is if you want to both look at my slides/shared screen and also write your own R code simulatenously. If you only have a single screen then that means switching between zoom and R and you may become overwhelmed. Nevertheless, I usually have multiple times during a course where everone has time to do an assignment so that during those time you will definitely get some undivided R time.</p>
+<p><strong>2. Kind of, I have a computer with one screen and an extra laptop/tablet.</strong> This is a bit better! Sometimes you may have two screens that cannot be connected to the same computer/laptop, but can both run simultaenously. In such a scenario you may open R on one computer/laptop and zoom on the other device. This allows for much better focussing on both my and your R code simultaneously.</p>
+<p><strong>1. Yes, I can connect a second screen to my laptop/computer.</strong> This is the perfect solution! Just like for the option above, you may easily follow my screen while at the same time working on yours. In addition, this option allows you (1) to copy something that was posted in the zoom chat to your R code or (2) share your screen with us via zoom so that we can have a look at your R code!</p>
+</div>
+<div id="what-else-can-i-do" class="section level2">
+<h2>What else can I do?</h2>
+<ul>
+<li><p><strong>Check you microphone.</strong> Everyone can make free zoom calls (for max. 40 min.), so you could call a friend and figure out whether your microphone works well. If you are simply using your laptop’s or camera’s microphone that’s fine, but notice that you mave have a full functioning headset lying around: the headphones delivered with smartphones often have microphones in them!</p></li>
+<li><p><strong>Check your camera.</strong> This is optional of course, but I do like it when I see as many people as possible looking back at me during the course. It also improves the course as I see your reactions to individual topics.</p></li>
+<li><strong>Check out the options in zoom.</strong>
+<ul>
+<li>Know how to use the “mute my microphone” button. It is crucial in an online conference that only those who speak actually turn their microphone on.</li>
+<li>Zoom actually has several functions that are rarely used but could be nice if everyone knew how to use them. A simple one is the chat function which is always on during the course. But you may also share your screen with us if you have a problem or simply give a “thumbs up” directly next to you face. You can also play around with the video settings to hide your background etc. Try to click yourself through the options or watch a youtube tutorial on this!</li>
+</ul></li>
+</ul>
+</div>
 </div>
 
 &nbsp;
