repeteated measure section

--- a/0contactinfo.html
+++ b/0contactinfo.html
@@ -429,6 +429,14 @@ div.tocify {
     <li>
       <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
     </li>
+    <li class="dropdown-submenu">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">repeated measures</a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="Repeated_RCBD_PiephoEdmondson2018.html">RCBD_PiephoEdmondson2018</a>
+        </li>
+      </ul>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
