--- a/0contactinfo.html
+++ b/0contactinfo.html
@@ -514,7 +514,7 @@ p.small {line-height: 1;}
 <p class="small">
 <p><i class="fa fa-home" style="color: #003f75ff;"> </i> Hamburg, Germany </br></p>
 <p>Contact </br> <a href="mailto:schmidtpaul1989@outlook.com"> <i class="fa fa-envelope" style="color: #003f75ff;"> </i> schmidtpaul1989@outlook.com </a> </br> <a href="https://github.com/SchmidtPaul/"> <i class="fa fa-github" style="color: #003f75ff;"> </i> GitHub </a> </br> <a href="https://www.linkedin.com/in/schmidtpaul1989/"> <i class="fa fa-linkedin" style="color: #003f75ff;"> </i> LinkedIn </a> </br> <a href="https://www.researchgate.net/profile/Paul_Schmidt17"> <i class="fa fa-pencil" style="color: #003f75ff;"> </i> ResearchGate </a> </br> <a href="https://www.xing.com/profile/Paul_Schmidt393/cv"> <i class="fa fa-xing" style="color: #003f75ff;"> </i> Xing </a></p>
-<p>Websites </br> <a href="https://schmidtpaul.github.io/crashcouRse/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> CrashcouRse: R für Bio- und Agrarwissenschaftler </a> </br> <a href="https://schmidtpaul.github.io/DSFAIR/"> <img src="https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/img/logo/favicon-32x32.png" width=16 height=16/> </i> DSFAIR: Data Science for Agriculture in R </a> </br> <a href="https://schmidtpaul.github.io/MMFAIR/"> <img src="https://raw.githubusercontent.com/SchmidtPaul/MMFAIR/master/img/logo/favicon-32x32.png" width=16 height=16/> </i> MMFAIR: Mixed Models for Agriculture in R </a> </br></p>
+<p>Websites </br> <a href="https://schmidtpaul.github.io/DSFAIR/"> <img src="https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/img/logo/favicon-32x32.png" width=16 height=16/> </i> DSFAIR: Data Science for Agriculture in R </a> </br> <a href="https://schmidtpaul.github.io/MMFAIR/"> <img src="https://raw.githubusercontent.com/SchmidtPaul/MMFAIR/master/img/logo/favicon-32x32.png" width=16 height=16/> </i> MMFAIR: Mixed Models for Agriculture in R </a> </br> <a href="https://schmidtpaul.github.io/crashcouRse/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> CrashcouRse: R für Bio- und Agrarwissenschaftler </a> </br></p>
 </p>
 <table class="table" style="margin-left: auto; margin-right: auto;">
 <thead>
@@ -541,285 +541,225 @@ Ich habe 2019 meine <strong>Promotion</strong> im Fachgebiet Biostatistik an der
 <table class=" lightable-minimal" style='font-size: 10px; font-family: "Trebuchet MS", verdana, sans-serif; margin-left: auto; margin-right: auto;'>
 <thead>
 <tr>
-<th style="text-align:left;">
+<th style="text-align:right;">
 Time
 </th>
 <th style="text-align:left;">
 Title
 </th>
-<th style="text-align:left;">
+<th style="text-align:right;">
 Language
 </th>
-<th style="text-align:left;">
+<th style="text-align:right;">
 Location
 </th>
-<th style="text-align:left;">
+<th style="text-align:right;">
 Duration
 </th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Nov 2020
 </td>
 <td style="text-align:left;">
 Planning experimental designs, repeated measurements, and their analyses in R
 </td>
-<td style="text-align:left;">
-Eng
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Universität Kassel
+<td style="text-align:right;width: 20em; ">
+Universität Kassel via <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Zoom_Communications_Logo.svg/1200px-Zoom_Communications_Logo.svg.png" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 2d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Nov 2020
 </td>
 <td style="text-align:left;">
 Data science for life sciences with R (part 1)
 </td>
-<td style="text-align:left;">
-Ger
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Ger <img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Thünen-Institut, Braunschweig
+<td style="text-align:right;width: 20em; ">
+Thünen-Institut, Braunschweig via <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Zoom_Communications_Logo.svg/1200px-Zoom_Communications_Logo.svg.png" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 3d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Oct 2020
 </td>
 <td style="text-align:left;">
 Experimental Design - Practicals in R
 </td>
-<td style="text-align:left;">
-Eng
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-CIHEAM Zaragoza via zoom
+<td style="text-align:right;width: 20em; ">
+CIHEAM Zaragoza via <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Zoom_Communications_Logo.svg/1200px-Zoom_Communications_Logo.svg.png" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 5d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Mar 2020
 </td>
 <td style="text-align:left;">
 Real-time consultation on statistics and mixed models in R
 </td>
-<td style="text-align:left;">
-Eng
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Universität Kassel
+<td style="text-align:right;width: 20em; ">
+Universität Kassel <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 2d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Dec 2019
 </td>
 <td style="text-align:left;">
 Basics of applied statistics
 </td>
-<td style="text-align:left;">
-Ger
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Ger <img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Universität Rostock
+<td style="text-align:right;width: 20em; ">
+Universität Rostock <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 2d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Nov 2019
 </td>
 <td style="text-align:left;">
 Data science for life sciences with R (part 2)
 </td>
-<td style="text-align:left;">
-Ger
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Ger <img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Thünen-Institut, Braunschweig
+<td style="text-align:right;width: 20em; ">
+Thünen-Institut, Braunschweig <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 3d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Oct 2019
 </td>
 <td style="text-align:left;">
 Data science for life sciences with R (part 1)
 </td>
-<td style="text-align:left;">
-Ger
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Ger <img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Thünen-Institut, Braunschweig
+<td style="text-align:right;width: 20em; ">
+Thünen-Institut, Braunschweig <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 3d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Sep 2019
 </td>
 <td style="text-align:left;">
 Essential basics of statistics
 </td>
-<td style="text-align:left;">
-Ger
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Ger <img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Universität Rostock
+<td style="text-align:right;width: 20em; ">
+Universität Rostock <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 2d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 Nov 2018
 </td>
 <td style="text-align:left;">
 Mixed models with R
 </td>
-<td style="text-align:left;">
-Ger
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Ger <img src="https://cdn.countryflags.com/thumbs/germany/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Thünen-Institut, Braunschweig
+<td style="text-align:right;width: 20em; ">
+Thünen-Institut, Braunschweig <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 3d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 May 2018
 </td>
 <td style="text-align:left;">
 Implementation of yield stability assessment with ASReml-R
 </td>
-<td style="text-align:left;">
-Eng
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Bangladesh Rice Research Institute, Gazipur
+<td style="text-align:right;width: 20em; ">
+Bangladesh Rice Res. Inst., Gazipur <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 1d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 2016-2018
 </td>
 <td style="text-align:left;">
 Statistical analysis with SAS (monthly)
 </td>
-<td style="text-align:left;">
-Eng
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Universität Hohenheim, Stuttgart
+<td style="text-align:right;width: 20em; ">
+Universität Hohenheim, Stuttgart <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 3d
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 2016-2018
 </td>
 <td style="text-align:left;">
 Statistical analysis with R (monthly)
 </td>
-<td style="text-align:left;">
-Eng
-<html>
-<body>
-<img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
-</body>
-</html>
+<td style="text-align:right;width: 5em; ">
+Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
 </td>
-<td style="text-align:left;">
-Universität Hohenheim, Stuttgart
+<td style="text-align:right;width: 20em; ">
+Universität Hohenheim, Stuttgart <img src="NA" width="32" height="6.4">
 </td>
-<td style="text-align:left;">
+<td style="text-align:right;width: 5em; ">
 3d
 </td>
 </tr>
