--- a/0contactinfo.html
+++ b/0contactinfo.html
@@ -394,7 +394,13 @@ div.tocify {
       <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
     </li>
     <li>
+      <a href="subsampling_Piepho1997.html">subsampling_Piepho1997</a>
+    </li>
+    <li>
       <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
+    </li>
+    <li>
+      <a href="splitplot_StreetFruit.html">splitplot_StreetFruit</a>
     </li>
     <li class="dropdown-submenu">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">repeated measures</a>
@@ -415,6 +421,9 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="DesigningExperiments.html">Designing experiments</a>
+    </li>
+    <li>
+      <a href="Diagnotstics.html">Model diagnostics</a>
     </li>
   </ul>
 </li>
