--- a/0contactinfo.html
+++ b/0contactinfo.html
@@ -375,38 +375,51 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="CRD_Mead1993.html">CRD_Mead1993</a>
-    </li>
-    <li>
-      <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
-    </li>
-    <li>
-      <a href="latsquare_Bridges1989.html">latsquare_Bridges1989</a>
-    </li>
-    <li>
-      <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
-    </li>
-    <li>
-      <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
-    </li>
-    <li>
-      <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
-    </li>
-    <li>
-      <a href="subsampling_Piepho1997.html">subsampling_Piepho1997</a>
-    </li>
-    <li>
-      <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
-    </li>
-    <li>
-      <a href="splitplot_StreetFruit.html">splitplot_StreetFruit</a>
-    </li>
     <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">repeated measures</a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Getting Started</a>
       <ul class="dropdown-menu" role="menu">
         <li>
-          <a href="Repeated_RCBD_PiephoEdmondson2018.html">RCBD_PiephoEdmondson2018</a>
+          <a href="rbasics.html">R Basics</a>
+        </li>
+      </ul>
+    </li>
+    <li class="dropdown-submenu">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Simple Experiments</a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="CRD_Mead1993.html">crd_Mead1993</a>
+        </li>
+        <li>
+          <a href="RCBD_ClewerScarisbrick2001.html">rcbd_ClewerScarisbrick2001</a>
+        </li>
+        <li>
+          <a href="latsquare_Bridges1989.html">latsquare_Bridges1989</a>
+        </li>
+        <li>
+          <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
+        </li>
+        <li>
+          <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
+        </li>
+        <li>
+          <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
+        </li>
+        <li>
+          <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
+        </li>
+      </ul>
+    </li>
+    <li class="dropdown-submenu">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Complex Experiments</a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="subsampling_Piepho1997.html">subsampling_Piepho1997</a>
+        </li>
+        <li>
+          <a href="splitplot_StreetFruit.html">splitplot_StreetFruit</a>
+        </li>
+        <li>
+          <a href="Repeated_RCBD_PiephoEdmondson2018.html">rcbd_PiephoEdmondson2018</a>
         </li>
       </ul>
     </li>
@@ -538,7 +551,7 @@ Duration
 <tbody>
 <tr>
 <td style="text-align:right;width: 5em; ">
-Mar 2021
+Mar 2022
 </td>
 <td style="text-align:left;">
 Data science for experimental life sciences with R (part 2)
@@ -555,7 +568,7 @@ Thünen-Institut, Braunschweig via <img src="https://upload.wikimedia.org/wikipe
 </tr>
 <tr>
 <td style="text-align:right;width: 5em; ">
-Mar 2021
+Mar 2022
 </td>
 <td style="text-align:left;">
 Data science for experimental life sciences with R (part 2)
@@ -572,7 +585,7 @@ Thünen-Institut, Braunschweig via <img src="https://upload.wikimedia.org/wikipe
 </tr>
 <tr>
 <td style="text-align:right;width: 5em; ">
-Mar 2021
+Mar 2022
 </td>
 <td style="text-align:left;">
 Data science for experimental life sciences with R (part 1)
@@ -589,7 +602,7 @@ Thünen-Institut, Braunschweig via <img src="https://upload.wikimedia.org/wikipe
 </tr>
 <tr>
 <td style="text-align:right;width: 5em; ">
-Mar 2021
+Mar 2022
 </td>
 <td style="text-align:left;">
 Data science for experimental life sciences with R (part 1)
@@ -609,7 +622,7 @@ Thünen-Institut, Braunschweig via <img src="https://upload.wikimedia.org/wikipe
 Dec 2021
 </td>
 <td style="text-align:left;">
-TBA
+Statistics with R (Beginner)
 </td>
 <td style="text-align:right;width: 5em; ">
 Eng <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-round-250.png" width="16" height="16">
