--- a/stddevstderr.html
+++ b/stddevstderr.html
@@ -476,38 +476,51 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="CRD_Mead1993.html">CRD_Mead1993</a>
-    </li>
-    <li>
-      <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
-    </li>
-    <li>
-      <a href="latsquare_Bridges1989.html">latsquare_Bridges1989</a>
-    </li>
-    <li>
-      <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
-    </li>
-    <li>
-      <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
-    </li>
-    <li>
-      <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
-    </li>
-    <li>
-      <a href="subsampling_Piepho1997.html">subsampling_Piepho1997</a>
-    </li>
-    <li>
-      <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
-    </li>
-    <li>
-      <a href="splitplot_StreetFruit.html">splitplot_StreetFruit</a>
-    </li>
     <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">repeated measures</a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Getting Started</a>
       <ul class="dropdown-menu" role="menu">
         <li>
-          <a href="Repeated_RCBD_PiephoEdmondson2018.html">RCBD_PiephoEdmondson2018</a>
+          <a href="rbasics.html">R Basics</a>
+        </li>
+      </ul>
+    </li>
+    <li class="dropdown-submenu">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Simple Experiments</a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="CRD_Mead1993.html">crd_Mead1993</a>
+        </li>
+        <li>
+          <a href="RCBD_ClewerScarisbrick2001.html">rcbd_ClewerScarisbrick2001</a>
+        </li>
+        <li>
+          <a href="latsquare_Bridges1989.html">latsquare_Bridges1989</a>
+        </li>
+        <li>
+          <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
+        </li>
+        <li>
+          <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
+        </li>
+        <li>
+          <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
+        </li>
+        <li>
+          <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
+        </li>
+      </ul>
+    </li>
+    <li class="dropdown-submenu">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Complex Experiments</a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="subsampling_Piepho1997.html">subsampling_Piepho1997</a>
+        </li>
+        <li>
+          <a href="splitplot_StreetFruit.html">splitplot_StreetFruit</a>
+        </li>
+        <li>
+          <a href="Repeated_RCBD_PiephoEdmondson2018.html">rcbd_PiephoEdmondson2018</a>
         </li>
       </ul>
     </li>
@@ -617,8 +630,8 @@ div.tocify {
 </div>
 <div id="references" class="section level1">
 <h1>References</h1>
-<p>Kozak, Marcin; Piepho, Hans-Peter (2020): <strong>Analyzing designed experiments: Should we report standard deviations or standard errors of the mean or standard errors of the difference or what?</strong> In: Ex. Agric. 56 (2), S. 312–319. DOI: <a href="https://www.cambridge.org/core/journals/experimental-agriculture/article/abs/analyzing-designed-experiments-should-we-report-standard-deviations-or-standard-errors-of-the-mean-or-standard-errors-of-the-difference-or-what/92DB0AF151C157B9C6E2FA40F9C9B635#">10.1017/S0014479719000401.</a></p>
-<p>Wilke, Claus O.: <strong>Fundamentals of Data Visualization</strong> <a href="https://clauswilke.com/dataviz/visualizing-uncertainty.html#visualizing-the-uncertainty-of-point-estimates">Chapter 16.2</a> Visualizing the uncertainty of point estimates. ISBN: 978-1492031086</p>
+<p>Kozak, Marcin; Piepho, Hans-Peter (2020): Analyzing designed experiments: Should we report standard deviations or standard errors of the mean or standard errors of the difference or what? In: Ex. Agric. 56 (2), S. 312–319. DOI: <a href="https://www.cambridge.org/core/journals/experimental-agriculture/article/abs/analyzing-designed-experiments-should-we-report-standard-deviations-or-standard-errors-of-the-mean-or-standard-errors-of-the-difference-or-what/92DB0AF151C157B9C6E2FA40F9C9B635#">10.1017/S0014479719000401.</a></p>
+<p>Wilke, Claus O.: Fundamentals of Data Visualization <a href="https://clauswilke.com/dataviz/visualizing-uncertainty.html#visualizing-the-uncertainty-of-point-estimates">Chapter 16.2</a> Visualizing the uncertainty of point estimates. ISBN: 978-1492031086</p>
 </div>
 
 &nbsp;
