Initialize rbasics chapter 2 and 3

--- a/compactletterdisplay.html
+++ b/compactletterdisplay.html
@@ -484,6 +484,12 @@ div.tocify {
         <li>
           <a href="rbasics.html">R Basics</a>
         </li>
+        <li>
+          <a href="cor_reg_drinks.html">Correlation &amp; Regression</a>
+        </li>
+        <li>
+          <a href="baddata_outliers_vision.html">Bad Data &amp; Outliers</a>
+        </li>
       </ul>
     </li>
     <li class="dropdown-submenu">
